refactor(PostCSS): :zap: use new built-in PostCSS
Use new PostCSS support to bundle the applications CSS together, reducing number of network requests, minimizing crititqal chains

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
     "**/*.less",
     "node_modules/open-props/open-props.min.css"
 	],
-	"liveServer.settings.port": 3333
+  "liveServer.settings.port": 3333,
+  "conventionalCommits.scopes": [
+    "PostCSS"
+  ]
 }
