--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "@accessible/drawer": "^3.0.2",
     "@portabletext/react": "^2.0.0",
-    "@remix-run/node": "^1.11.1",
-    "@remix-run/react": "^1.11.1",
-    "@remix-run/serve": "^1.11.1",
-    "@remix-run/vercel": "^1.11.1",
+    "@remix-run/node": "^1.14.3",
+    "@remix-run/react": "^1.14.3",
+    "@remix-run/serve": "^1.14.3",
+    "@remix-run/vercel": "^1.14.3",
     "@sanity/client": "^3.4.1",
     "@sanity/document-internationalization": "github:EmilEinarsen/document-internationalization",
     "@sanity/image-url": "^1.0.1",
@@ -30,13 +30,15 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.11.1",
-    "@remix-run/eslint-config": "^1.11.1",
+    "@remix-run/dev": "^1.14.3",
+    "@remix-run/eslint-config": "^1.14.3",
     "@sanity/eslint-config-studio": "^2.0.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.30.0",
     "open-props": "^1.5.3",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   },
