--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-is": "^18",
     "remix-utils": "^6.0.0",
     "sanity": "^3.2.5",
+    "sanity-page-builder": "github:EmilEinarsen/sanity-page-builder",
     "sanity-plugin-media": "^2.0.2",
     "styled-components": "^5.2.0"
   },
