--- a/package.json
+++ b/package.json
@@ -9,39 +9,43 @@
   },
   "dependencies": {
     "@accessible/drawer": "^3.0.2",
-    "@portabletext/react": "^2.0.0",
-    "@remix-run/node": "^1.14.3",
-    "@remix-run/react": "^1.14.3",
-    "@remix-run/serve": "^1.14.3",
-    "@remix-run/vercel": "^1.14.3",
-    "@sanity/client": "^3.4.1",
+    "@phosphor-icons/react": "^2.0.8",
+    "@portabletext/react": "^2.0.2",
+    "@remix-run/node": "^1.15.0",
+    "@remix-run/react": "^1.15.0",
+    "@remix-run/serve": "^1.15.0",
+    "@remix-run/vercel": "^1.15.0",
+    "@sanity/client": "^5.4.2",
     "@sanity/document-internationalization": "github:EmilEinarsen/document-internationalization",
-    "@sanity/image-url": "^1.0.1",
-    "@sanity/vision": "^3.0.0",
-    "groq": "^2.33.2",
-    "isbot": "^3.6.5",
-    "phosphor-react": "^1.4.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-is": "^18",
-    "remix-utils": "^6.0.0",
-    "sanity": "^3.2.5",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.8.3",
+    "groq": "^3.8.3",
+    "isbot": "^3.6.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "remix-utils": "^6.1.0",
+    "sanity": "^3.8.3",
+    "sanity-image": "^0.1.4",
     "sanity-page-builder": "github:EmilEinarsen/sanity-page-builder",
-    "sanity-plugin-media": "^2.0.2",
-    "styled-components": "^5.2.0"
+    "sanity-plugin-media": "^2.0.5",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.14.3",
-    "@remix-run/eslint-config": "^1.14.3",
+    "@remix-run/dev": "^1.15.0",
+    "@remix-run/eslint-config": "^1.15.0",
     "@sanity/eslint-config-studio": "^2.0.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.30.0",
-    "open-props": "^1.5.3",
+    "cssnano": "^6.0.0",
+    "eslint": "^8.38.0",
     "postcss-import": "^15.1.0",
-    "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
+    "postcss-nesting": "^11.2.2",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=14"
