--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/client": "^5.4.2",
     "@sanity/document-internationalization": "github:EmilEinarsen/document-internationalization",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/preview-kit": "^1.4.0",
     "@sanity/vision": "^3.8.3",
     "groq": "^3.8.3",
     "isbot": "^3.6.8",
@@ -28,6 +29,7 @@
     "sanity": "^3.8.3",
     "sanity-image": "^0.1.4",
     "sanity-page-builder": "github:EmilEinarsen/sanity-page-builder",
+    "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-media": "^2.0.5",
     "styled-components": "^5.3.9"
   },
