--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-kit": "^1.4.0",
     "@sanity/vision": "^3.8.3",
+    "@vercel/analytics": "^0.1.11",
     "groq": "^3.8.3",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
