--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "start": "remix-serve api",
-    "dev": "run-p dev:*",
-    "dev:build": "cross-env NODE_ENV=development remix dev",
-    "dev:serve": "cross-env NODE_ENV=development nodemon --watch api node_modules/.bin/remix-serve api",
+    "start": "remix-serve build",
+    "dev": "remix dev",
     "tsc": "tsc"
   },
   "dependencies": {
