refactor: :recycle: tailwind theming & heroicons
configure the tailwind theme to narrow intelligens and use @heroicons/react instead of @phosphor-icons/react

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@accessible/drawer": "^3.0.2",
-    "@phosphor-icons/react": "^2.0.8",
+    "@heroicons/react": "^2.0.17",
     "@portabletext/react": "^2.0.2",
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
