--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "remix-utils": "^6.1.0",
-    "sanity": "^3.8.3",
+    "sanity": "^3.9.0",
     "sanity-image": "^0.1.4",
-    "sanity-page-builder": "github:EmilEinarsen/sanity-page-builder",
+    "sanity-page-builder": "^0.0.1",
     "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-media": "^2.0.5",
     "styled-components": "^5.3.9"
