--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-is": "^18.2.0",
     "remix-utils": "^6.1.0",
     "sanity": "^3.9.0",
@@ -42,6 +43,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-google-recaptcha": "^2.1.5",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.0",
     "eslint": "^8.38.0",
