--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "remix-serve build",
     "start-prod": "remix build && dotenv -e .env.prod remix-serve build",
     "dev": "remix dev",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "check-lint": "eslint . --ext ts --ext tsx --ext js",
+    "format-lint": "eslint . --ext ts --ext tsx --ext js --fix",
+    "format": "prettier --write . && npm run format-lint",
+    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@accessible/drawer": "^3.0.2",
@@ -22,6 +29,7 @@
     "@sanity/preview-kit": "^1.4.0",
     "@sanity/vision": "^3.8.3",
     "@vercel/analytics": "^0.1.11",
+    "clsx": "^1.2.1",
     "groq": "^3.8.3",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
@@ -45,12 +53,21 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-google-recaptcha": "^2.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.0",
     "dotenv-cli": "^7.2.1",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.0",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^11.2.2",
+    "prettier": "2.8.8",
     "remix-flat-routes": "^0.5.8",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
